fix-assets-chore: removed extra space, renamed files

--- a/src/pages/signUp.css
+++ b/src/pages/signUp.css
@@ -12,7 +12,7 @@
 .image-signUp {
   width: 60%;
   height: 100vh; 
-  background-image: url("../assets/images/webP-images/side-img.webp");
+  background-image: url("../assets/images/webP-images/Hero.webp");
   background-size: cover;
   background-repeat: no-repeat;
 }
